Viewport: Light "Show Cone" not drawing #62262

Closed
opened 2019-03-06 14:57:52 +01:00 by Dalai Felinto · 7 comments

Blender Version
Broken: c80415627e.
Worked: 2.79, but I also suspect 2.8x at some point had this working.

Short description of error
The light volume is not drawing in the viewport.

Exact steps for others to reproduce the error

**Blender Version** Broken: c80415627e. Worked: 2.79, but I also suspect 2.8x at some point had this working. **Short description of error** The light volume is not drawing in the viewport. **Exact steps for others to reproduce the error** * Turn on "Show Cone" of any spot light, or just open this 2.79 file: [lamp-volume-279.blend](https://archive.blender.org/developer/F6773201/lamp-volume-279.blend)
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto
Clément Foucault was assigned by Dalai Felinto 2019-03-06 15:00:28 +01:00
Author
Owner

Development note
The problem seems related to DRW_STATE_WRITE_DEPTH not set for the light_spot_volume* DRWShadingGroup elements.

**Development note** The problem seems related to *DRW_STATE_WRITE_DEPTH* not set for the `light_spot_volume*` DRWShadingGroup elements.
Author
Owner

Note: we need to address stereo volume and convergence plane drawing as well.

Note: we need to address stereo volume and convergence plane drawing as well.
Member

Added subscriber: @pablovazquez

Added subscriber: @pablovazquez
Member

Works for me in factory startup (Linux, NVIDIA). Noticed it only works when Multisampling is set to 2 or No Multisample (Quality panel in Viewport Preferences).

Works for me in factory startup (Linux, NVIDIA). Noticed it only works when Multisampling is set to 2 or No Multisample (Quality panel in Viewport Preferences).

This issue was referenced by 61039bf713

This issue was referenced by 61039bf71376f1b57cd8df7ff3deb285099becba

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62262
No description provided.